# tiendaMVC

./: .gitignore  README.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml  requeriments.txt
backend/: create_user_test.py  main.py  seed.py
backend/app/: database.py
backend/app/core/: dependencies.py  security.py
backend/app/models/: __init__.py  enums.py  product.py  sale.py  supplier.py  user.py
backend/app/routers/: auth_router.py  product_router.py  report_router.py  sale_router.py  supplier_router.py
backend/app/schemas/: auth_schema.py  product_schema.py  report_schema.py  sale_schema.py  supplier_schema.py
backend/app/services/: product_service.py  sale_service.py  supplier_service.py
frontend/react_app/: package-lock.json  package.json
frontend/react_app/src/: App.jsx  index.css
frontend/react_app/src/components/: Layout.jsx  PrivateRoute.jsx  ProductForm.jsx  Sidebar.jsx
frontend/react_app/src/context/: AuthContext.jsx
frontend/react_app/src/pages/: HomePage.jsx  InventoryPage.jsx  LoginPage.jsx
frontend/react_app/src/services/: api.js  authService.js  productService.js
